[package]
name = "cooking_thief"
version = "1.0.0"
edition = "2021"
authors = ["Mifom <requestdg@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"

[profile.dev.package.'*']
opt-level = 3

[features]
cheat = []
